changes to category search results, including initial attempt at more button. Hacks for excluding categories

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/images/touch-icon-ipad-retina.png">
 </head>
-<body>
+<body window-width>
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="/stylesheets/vendor/ie8-overlay.css">
     <div id="ie8_overlay_bg"></div>
