--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -32,14 +32,16 @@
                                href="{{::url.createCategoryUrl(category.platform, category.url)}}"></a>
                         </h2>
                         <ul class="category-apps">
-                            <li ng-repeat-start="app in ::category.apps | limitTo: 6"
+                            <li ng-repeat-start="app in category.displayApps track by app.id"
                                 class="app-summary category-search-app-summary"
-                                ng-class="::{'extra-app': $index > 2}">
+                                ng-class="{'extra-app': $index > 2 && !category.moreAdded}">
                                 <div class="app-summary-sidebar-wrapper">
+                                    <p class="position" ng-bind="::app.position | ordinalNumber"></p>
                                     <a class="img-wrapper"
                                        href="{{::url.createAppUrl(app.platform, app.url)}}" >
                                         <img ng-src="{{::app.imageUrl}}">
                                     </a>
+                                    <p class="price highlighted" ng-bind="::app.price | formatPrice"></p>
                                 </div>
                                 <div class="app-summary-body-wrapper">
                                     <h3>
@@ -54,11 +56,28 @@
                                  ng-class="::{'two-in-row': ($index % 2) === 1, 'three-in-row': ($index % 3) === 2}">
                             </div>
                         </ul>
-                        <div class="more-wrapper">
-                            <a class="more underline-on-hover"
-                               href="{{::url.createCategoryUrl(category.platform, category.url)}}">
-                                {{::category.name}} chart<span class="icon"></span>
-                            </a>
+                        <div class="category-search-actions-wrapper">
+                            <div class="more-results-wrapper"
+                                 ng-show="category.displayApps.length < category.totalApps || (windowIsNarrow && !category.moreAdded && category.totalApps > 3)">
+                                <!--<span class="more-results-icon icon"></span>-->
+                                <a class="more-results-link underline-on-hover" href
+                                   ng-click="searchApi.getMoreCategoryApps(category)">More</a>
+                            </div>
+                            <!--<div ng-show="category.displayApps.length < category.totalApps || (windowIsNarrow && !category.moreAdded && category.totalApps > 3)">-->
+                                <!--<span class="more-results-icon icon"></span>-->
+                                <!--<a class="more-results-link underline-on-hover" href>More&hellip;</a>-->
+                                <!--&lt;!&ndash;<a class="more-button never-underline" href><span></span></a>&ndash;&gt;-->
+                                   <!--&lt;!&ndash;ng-click="category.appendNextPage(categoryData)"&ndash;&gt;-->
+                                   <!--&lt;!&ndash;ng-show="categoryData.hasMorePages"><span></span></a>&ndash;&gt;-->
+                            <!--</div>-->
+                            <!--<span class="category-chart-icon icon"></span>-->
+                            <div class="category-chart-wrapper">
+                                <div class="category-chart-icon icon"></div>
+                                <a class="category-chart-link underline-on-hover"
+                                   href="{{::url.createCategoryUrl(category.platform, category.url)}}">
+                                    Full chart</a>
+                                    <!--{{::category.name}} chart</a>-->
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -70,6 +89,7 @@
                             <a href="{{::url.createAppUrl(app.platform, app.url)}}">
                                 <img ng-src="{{::app.imageUrl}}">
                             </a>
+                            <p class="price highlighted" ng-bind="::app.price | formatPrice"></p>
                         </div>
                         <div class="app-summary-body-wrapper">
                             <h3>
