added start of category obfuscation script and improved rules removal in app descriptions

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -72,7 +72,7 @@
                             <!--</div>-->
                             <!--<span class="category-chart-icon icon"></span>-->
                             <div class="category-chart-wrapper">
-                                <div class="category-chart-icon icon"></div>
+                                <!--<div class="category-chart-icon icon"></div>-->
                                 <a class="category-chart-link underline-on-hover"
                                    href="{{::url.createCategoryUrl(category.platform, category.url)}}">View chart</a>
                             </div>
