improved styling of category search results

--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -41,7 +41,7 @@
                                        href="{{::url.createAppUrl(app.platform, app.url)}}" >
                                         <img ng-src="{{::app.imageUrl}}">
                                     </a>
-                                    <p class="price highlighted" ng-bind="::app.price | formatPrice"></p>
+                                    <p class="price" ng-bind="::app.price | formatPrice"></p>
                                 </div>
                                 <div class="app-summary-body-wrapper">
                                     <h3>
