privacy policy and bug fixes

--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -92,7 +92,8 @@
                 <h2>CATEGORY CHARTS</h2>
                 <ul>
                     <li ng-repeat="category in ::appData.categories">
-                        <h4>{{::category.position | ordinalNumber}} in <a class="body-link underline-on-hover" href="{{::url.createCategoryUrl(appData.platform, category.url)}}">{{::category.name}}</a></h4>
+                        <p class="position" ng-bind="::category.position | ordinalNumber"></p>
+                        <h4><a class="body-link underline-on-hover" href="{{::url.createCategoryUrl(appData.platform, category.url)}}">{{::category.name}}</a></h4>
                     </li>
                 </ul>
             </div>
