added legalese to footer

--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -13,9 +13,16 @@
             </ul>
         </div>
         <div class="copyright-wrapper">
-            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.
+            <p class="copyright">
+                &copy; 2014 AppAkin Ltd. All Rights Reserved.
                 <img class="akin-logo" src="/images/appakin-logo-light.svg">
             </p>
         </div>
+        <p class="legal">
+            iPod, iPhone, iPad and iTunes are trademarks of Apple Inc.
+            App images provided courtesy of iTunes.
+            AppAkin Ltd is not affiliated with Apple Inc.
+            Other names are registered trademarks or trademarks of their respective companies.
+        </p>
     </div>
 </div>
