--- a/src/web.public/public/scripts/appakin/pages/terms/terms.html
+++ b/src/web.public/public/scripts/appakin/pages/terms/terms.html
@@ -1,3 +1,197 @@
 <div id="terms" class="main-wrapper">
     <h1>Terms of Service</h1>
+    <p>
+        By accessing, browsing, or in any way using this web site located at AppAkin.com
+        (the "Site" or the "Service") which is provided by AppAkin Ltd ("AppAkin"),
+        you agree to these Terms of Service.
+    </p><p>
+    You must be at least eighteen (18) years of age to use the Service. AppAkin reserves the right
+    to refuse service to anyone at any time without notice for any reason.
+</p><p>
+    You understand that by using the Service, you may encounter material that may be deemed offensive,
+    indecent, or objectionable; nevertheless, you agree to use the Service at your sole risk and that
+    AppAkin shall have no liability to you for content that may be found to be offensive, indecent,
+    or objectionable.
+</p><p>
+    You will be responsible for all activities occurring under your account and for keeping your
+    password secure. You understand and agree that the Service is provided to you on an AS IS and
+    AS AVAILABLE basis. AppAkin disclaims all responsibility and liability for the availability,
+    timeliness, security or reliability of the Service or any other client software. Due to the nature of the
+    information provided on the site it is highly likely that the information is incomplete and
+    that the site displays information that is inaccurate and/or not up-to-date. AppAkin also
+    reserves the right to modify, suspend or discontinue the Service with or without notice at any
+    time and without any liability to you.
+</p><p>
+    To access or use portions of the Service you may be required to register for an account and sign in to the Service.
+</p>
+    <dl>
+        <dt>Definition: Your Content</strong></dt>
+        <dd>
+            Information, images, or photographs that you submit,upload, post, or transmit to, or using, the Service,
+            including but not limited to the ratings, reviews, information that you display as
+            part of your account profile, or other commentary that you may submit, upload, post, or
+            transmit to, or using, the Service.
+        </dd>
+        <dt>Definition: Third party site</strong></dt>
+        <dd>
+            AppExplorer may provide links to other websites ("third part sites"). AppAkin has no control over the content or services
+            provided by these sites and you agree that AppAkin is not responsible
+            for the availability or contents of any third party site.
+        </dd>
+        <dt>Definition: Application Download Provider</strong></dt>
+        <dd>
+            Third party site that provides application purchase and download services.
+        </dd>
+    </dl>
+    <p>
+        You are solely responsible for Your Content. You assume all risks associated with use of Your Content,
+        including any reliance on its accuracy, completeness or usefulness by others, or any disclosure by
+        you of information in Your Content that makes you personally identifiable. You hereby affirm, represent,
+        and warrant that you own, or have the necessary licenses, rights, consents, and permissions to use,
+        and authorize AppAkin to use, Your Content as described herein. You may not imply that Your Content is in
+        any way sponsored or endorsed by AppAkin.
+    </p><p>
+    You agree not to post or transmit any unlawful, harmful, threatening, abusive, harassing, defamatory,
+    vulgar, obscene, profane, hateful, racially, ethnically or otherwise objectionable material of any kind,
+    including, but not limited to, any material which encourages conduct that would constitute a criminal
+    offense, violate the rights of others, or otherwise violate any applicable local, state, national or
+    international law.
+</p><p>
+    You may not submit any content anonymously or under a false name or a false e-mail address.
+    You may not impersonate another user or provide any false information about yourself.
+</p><p>
+    Because you alone are responsible for Your Content (and not AppAkin), you may expose yourself to
+    liability if, for example, Your Content violates any third-party right, including any copyright,
+    trademark, patent, trade secret, moral right, privacy right, right of publicity, or any other
+    intellectual property or proprietary right; contains material that is false, intentionally
+    misleading, or defamatory; contains material that is unlawful, including illegal hate speech
+    or pornography; exploits or otherwise harms minors; or violates or advocates the violation
+    of any law or regulation.
+</p><p>
+    AppAkin makes no representations that it will publish or otherwise use Your Content in any way.
+    AppAkin may or may not use Your Content in its sole discretion. You understand
+    that AppAkin does
+    not guarantee any confidentiality with respect to Your Content. AppAkin
+    has no obligation to store or provide you with copies of Your Content.
+</p><p>
+    Although AppAkin and its affiliates may from time to time monitor or review discussions,
+    postings, transmissions, bulletin boards and other user generated content on
+    the Service, neither AppAkin nor its affiliates is under any obligation to do so.
+    You acknowledge that AppAkin and its affiliates do not control the information available on
+    the bulletin boards, and other user generated content and that any opinions, advice,
+    statements, services, offers or other information or content presented or disseminated on any bulletin
+    board or on any other user generated content are those of their respective authors who
+    are solely liable for their content.
+</p><p>
+    AppAkin reserves the right (but has no obligation) to remove or suppress User Content from the
+    Service at its sole discretion for any or no reason and without notice or liability of any kind,
+    including without limitation, the suppression or removal of User Content that AppAkin deems
+    untrustworthy or in violation of the Terms of Service or any guidelines that may be posted on the
+    Site.
+</p><p>
+    AppAkin and its licensees may display advertisements and other information adjacent to or
+    included with Your Content on the Service. You agree that
+    you are not entitled to any compensation for any such advertisements. The manner, mode
+    and extent of such advertising are subject to change without specific notice to you.
+</p><p>
+    AppAkin and its licensees may receive compensation from application download providers if you use
+    an AppExplorer link to initiate an application purchase. You agree that
+    you are not entitled to any portion or the entirety of this compensation.
+</p>
+    <h2>Third party sites</h2>
+    <p>
+        You may be transferred to online merchants or other third party sites through links or frames from this site.
+        These sites may contain information or
+        material that is illegal, unreasonable or that some people may find inappropriate or offensive. These other sites
+        are not under the control of AppAkin, are not monitored or reviewed by AppAkin, and AppAkin is not
+        aware of the contents of such sites. You acknowledge that AppAkin is not responsible for the accuracy,
+        copyright compliance, legality, decency, or any other aspect of the contents or any transmissions received
+        through such sites. The inclusion of such a link or frame does not imply endorsement of this site by AppAkin,
+        its advertisers or licensors, any association with its operators and is provided solely for your convenience.
+        You agree that AppAkin and its licensors have no liability whatsoever from such third party sites and your
+        usage of them.
+    </p>
+    <h2>Disclaimers</h2>
+    <ol>
+        <li>
+            THE SITE AND ALL SITE CONTENT IS MADE AVAILABLE TO YOU ON AN "AS IS" BASIS. APPAKIN MAKES NO
+            WARRANTIES, REPRESENTATIONS, OR CONDITIONS OF ANY KIND, EXPRESS, STATUTORY OR IMPLIED AS
+            TO (1) THE OPERATION AND FUNCTIONALITY OF THE SITE, (2) THE ACCURACY, INTEGRITY,
+            COMPLETENESS, QUALITY, LEGALITY, USEFULNESS, SAFETY, AND IP RIGHTS OF ANY OF THE SITE
+            CONTENT, INCLUDING BUT NOT LIMITED TO THE ACCURACY OF REVIEWS AND OTHER
+            INFORMATION LISTED ON THE SITE, AND (3) THE PRODUCTS AND SERVICES ASSOCIATED WITH
+            THE SITE OR SITE CONTENT, INCLUDING BUT NOT LIMITED TO THE PRODUCTS AND SERVICES
+            SOLD BY BUSINESSES LISTED ON THE SITE. APPAKIN FURTHER DISCLAIMS ALL WARRANTIES, EXPRESS,
+            STATUTORY, OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF
+            MERCHANTABILITY, MERCHANTABLE QUALITY, DURABILITY, FITNESS FOR A PARTICULAR PURPOSE
+            AND NON-INFRINGEMENT. NO ADVICE OR INFORMATION, WHETHER ORAL OR WRITTEN, THAT
+            YOU OBTAIN FROM APPAKIN OR THE SITE SHALL CREATE ANY WARRANTY, REPRESENTATION, OR
+            CONDITION NOT EXPRESSLY STATED HEREIN.
+        </li><li>
+
+        APPAKIN SPECIFICALLY DISCLAIMS ALL LIABILITY RELATING TO YOUR USE OF THE SITE, SERVICES, AND
+        SITE CONTENT. ACCESS TO, AND USE OF, THE SITE, SERVICES, AND SITE CONTENT ARE AT YOUR
+        OWN DISCRETION AND RISK, AND YOU WILL BE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR
+        COMPUTER SYSTEM OR LOSS OF DATA RESULTING THEREFROM. APPAKIN ASSUMES NO LIABILITY FOR
+        ANY COMPUTER VIRUS OR SIMILAR CODE THAT IS DOWNLOADED TO YOUR COMPUTER FROM THE
+        SITE OR IN CONNECTION WITH THE SERVICES.
+    </li><li>
+        YOUR COMMUNICATIONS OR DEALINGS WITH ANY OF THE BUSINESSES, ADVERTISERS, OR USERS ON THE
+        SITE, ARE SOLELY BETWEEN YOU AND SUCH BUSINESSES, ADVERTISERS, AND USERS. APPAKIN IS
+        NOT RESPONSIBLE, AND DISCLAIMS ALL LIABILITY, FOR ANY LOSS OR DAMAGE ARISING OUT
+        OF ANY SUCH COMMUNICATIONS OR DEALINGS. APPAKIN RESERVES THE RIGHT (BUT HAS NO OBLIGATION)
+        TO MONITOR DISPUTES BETWEEN YOU AND SUCH BUSINESSES, ADVERTISERS, AND USERS.
+    </li><li>
+
+        SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF CERTAIN WARRANTIES, REPRESENTATIONS, OR
+        CONDITIONS, THE LIMITATION OR EXCLUSION OF IMPLIED WARRANTIES, OR LIMITATIONS ON HOW
+        LONG AN IMPLIED WARRANTY MAY LAST, SO THE ABOVE LIMITATIONS MAY NOT APPLY TO YOU. IF
+        YOU RESIDE IN SUCH A JURISDICTION, THE ABOVE LIMITATIONS SHALL APPLY TO YOU TO THE
+        FULLEST EXTENT PERMITTED UNDER APPLICABLE LAW.
+    </li>
+    </ol>
+
+    <h2>Limitation on Liability.</h2>
+    <p>
+        WITHOUT LIMITING THE FOREGOING, APPAKIN WILL NOT BE LIABLE UNDER ANY THEORY OF LAW, FOR ANY
+        INDIRECT, INCIDENTAL, PUNITIVE, EXEMPLARY, RELIANCE, OR CONSEQUENTIAL DAMAGES, INCLUDING,
+        BUT NOT LIMITED TO LOSS OF PROFITS, BUSINESS INTERRUPTION, AND/OR LOSS OF INFORMATION OR
+        DATA. NOTWITHSTANDING ANYTHING TO THE CONTRARY CONTAINED HEREIN, APPAKIN'S MAXIMUM AGGREGATE
+        LIABILITY TO YOU FOR ANY CAUSES WHATSOEVER, AND REGARDLESS OF THE FORM OF ACTION, WILL AT
+        ALL TIMES BE LIMITED TO THE GREATER OF (i) THE AMOUNT PAID, IF ANY, BY YOU TO APPAKIN IN
+        CONNECTION WITH THE SITE IN THE 12 MONTHS PRIOR TO THE ACTION GIVING RISE TO LIABILITY
+        OR (ii) US$100.00. SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OR LIMITATION OF
+        INCIDENTAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, SO THE ABOVE LIMITATIONS AND EXCLUSIONS
+        MAY NOT APPLY TO YOU. IF YOU RESIDE IN SUCH A JURISDICTION, THE ABOVE LIMITATIONS AND
+        EXCLUSIONS SHALL APPLY TO YOU TO THE FULLEST EXTENT PERMITTED UNDER APPLICABLE LAW.
+
+    <h2>Indemnity</h2>
+    <p>
+    You agree to indemnify and hold AppAkin, its parents, subsidiaries, affiliates, any related
+    companies, suppliers, licensors and partners, and the officers, directors, employees,
+    agents and representatives of each of them harmless, including costs and attorneys' fees,
+    from any claim or demand made by any third party due to or arising out of (i) your access
+    to or use of the Service, (ii) your violation of the Terms of Service, or (iii)
+    the infringement by you, or any third party using your account, of any intellectual
+    property or other right of any person or entity. AppAkin reserves the right, at your expense,
+    to assume the exclusive defense and control of any matter for which you are required to
+    indemnify us and you agree to cooperate with our defense of these claims. You agree not
+    to settle any matter without the prior written consent of AppAkin. AppAkin will use reasonable
+    efforts to notify you of any such claim, action or proceeding upon becoming aware of it.
+    </p>
+    <p>
+        These Terms of Service and any disputes arising out of or related to the Site shall be governed by,
+        and construed and enforced in accordance with the laws
+        of the United Kingdom of Great Britain and English law shall apply, as it is applied to
+        agreements entered into and to be performed entirely within such State.
+    </p>
+    <p>
+        The Terms of Service may be modified by AppAkin at any time. When these changes are made,
+        AppAkin will notify you by making a new copy of the Terms of Service available on this page
+        and will indicate at the top of this page the date these terms were last revised. Any such
+        modification will be effective upon AppAkin's posting of new Terms of Service. Your continued
+        use of the Service after any posted modification to the Terms of Service indicates your acceptance
+        of the modification. Unless expressly stated otherwise by AppAkin, any new
+        site content implemented after your initial access to the Service shall be subject to the Terms of Service.
+    </p>
 </div>
